<resources>
    <string name="app_name">My Application</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register_hint">Register here.</string>
    <string name="btn_login">Log in</string>
    <string name="register">Register</string>
    <string name="reenter_password">Reenter the password</string>
    <string name="username">Username</string>

    <string name="password_mismatch">Password mismatch</string>
    <string name="required_field">This field is required</string>
    <string name="success_register">Successfully registered.</string>
    <string name="hint_search">Species, Age, Size, Cat, Dogs,..</string>
    <string name="adopt_pets">Adopt Pets</string>

    <string name="beginner_intro">Beginner\'s Guide to Pet Care</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read More&#8230;</string>
    <string name="cat_desc">1. What is a cat’s stress response?\n2. How to smoothly bring a cat home/take a cat outside?\n3. How to teach a cat to use a litter box and litter?\n4. What should a cat eat on a daily basis?\n5. How to trim a cat’s nails?</string>
    <string name="cat_title">Basic Knowledge About Cats:</string>
    <string name="dog_desc">1. Basic supplies preparation\n2. Health management for dogs\n3. Diet and feeding\n4. Training and behavior management\n5. Living environment and daily care\n6. Mental preparation and awareness of responsibility</string>
    <string name="dog_title">Basic Knowledge About Dogs:</string>
    <string name="back_to_home">Back to Home</string>
    <string name="cat_image">Cat Image</string>
    <string name="cat_intro">1. What is a cat’s stress response?</string>
    <string name="dog_intro">Coming soon</string>
    <string name="cat_basic_title">Basic Knowledge About Cats</string>

    <string name="user_profile">User Profile</string>
    <string name="saved">Saved</string>
    <string name="log_out">Log Out</string>
    <string name="title_fragment_post">Post a Pet for Adoption</string>
    <string name="post_desc">Found a stray pet but can’t provide a home? Share the details here and help connect them with someone who can. Please fill out the information below to create a post for this pet.</string>
    <string name="submit">Submit</string>
    <string name="please_select">--Please Select--</string>


    <string-array name="array_empty">
        <item>---Please Select---</item>
    </string-array>

    <string-array name="array_pet_age">
        <item>---Please Select---</item>
        <item>&lt; 1 year</item> <!-- This represents "< 1 year" -->
        <item>1 – 3 years</item>
        <item>3 – 7 years</item>
        <item>&gt; 7 years</item> <!-- This represents "> 7 years" -->
    </string-array>

    <string-array name="array_pet_type">
        <item>---Please Select---</item>
        <item>Cat</item>
        <item>Dog</item>
    </string-array>

    <string-array name="array_pet_size">
        <item>---Please Select---</item>
        <item>Small Breed</item>
        <item>Medium Breed</item>
        <item>Large Breed</item>
    </string-array>

    <string-array name="array_species_breed_dog_small">
        <item>---Please Select---</item>
        <item>Chihuahua</item>
        <item>Pomeranian</item>
        <item>Yorkshire Terrier</item>
        <item>French Bulldog</item>
        <item>Dachshund</item>
        <item>Maltese</item>
        <item>Shih Tzu</item>
        <item>Pug</item>
        <item>Mixed</item>
    </string-array>

    <string-array name="array_species_breed_dog_medium">
        <item>---Please Select---</item>
        <item>Cocker Spaniel</item>
        <item>Border Collie</item>
        <item>Bulldog</item>
        <item>Schnauzer</item>
        <item>Shiba Inu</item>
        <item>Collie</item>
        <item>Bull Terrier</item>
        <item>Australian Cattle Dog</item>
        <item>Basset Hound</item>
        <item>Mixed</item>
    </string-array>

    <string-array name="array_species_breed_dog_large">
        <item>---Please Select---</item>
        <item>German Shepherd</item>
        <item>Golden Retriever</item>
        <item>Labrador Retriever</item>
        <item>Doberman Pinscher</item>
        <item>Samoyed</item>
        <item>Siberian Husky</item>
        <item>Rottweiler</item>
        <item>Great Dane</item>
        <item>Alaskan Malamute</item>
        <item>Mixed</item>
    </string-array>

    <string-array name="array_species_breed_cat_small">
        <item>---Please Select---</item>
        <item>Singapura</item>
        <item>Cornish Rex</item>
        <item>Oriental Shorthair</item>
        <item>Burmese</item>
        <item>Mixed</item>
    </string-array>

    <string-array name="array_species_breed_cat_medium">
        <item>---Please Select---</item>
        <item>American Shorthair</item>
        <item>British Shorthair</item>
        <item>Siamese</item>
        <item>Russian Blue</item>
        <item>Abyssinian</item>
        <item>Mixed</item>
    </string-array>

    <string-array name="array_species_breed_cat_large">
        <item>---Please Select---</item>
        <item>Maine Coon</item>
        <item>Siberian</item>
        <item>Norwegian Forest Cat</item>
        <item>Ragdoll</item>
        <item>Turkish Van</item>
        <item>Mixed</item>
    </string-array>

    <string-array name="array_neuter_status">
        <item>---Please Select---</item>
        <item>Neutered</item>
        <item>Intact</item>
    </string-array>


    <string-array name="array_gender">
        <item>---Please Select---</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="array_states">
        <item>---Please Select---</item>
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
        <item>Kuala Lumpur</item>
        <item>Labuan</item>
        <item>Putrajaya</item>
    </string-array>


</resources>