<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/gradient_background"
    tools:context=".Activity.fragments.home.CatGuideFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:textColor="@android:color/black"
            app:drawableStartCompat="@drawable/baseline_arrow_back"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/guide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner_intro"
            android:textSize="18sp"
            android:textColor="#555555"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <!-- Section Title -->
        <TextView
            android:id="@+id/section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/cat_basic_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingBottom="16dp" />


        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/cat_image"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:background="@drawable/edittext_border"
                android:src="@drawable/cat"
                android:layout_gravity="center"
                android:contentDescription="@string/cat_image" />
        </androidx.cardview.widget.CardView>


        <!-- Question -->
        <TextView
            android:id="@+id/cat_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_intro"
            android:paddingStart="30dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:paddingTop="8dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</FrameLayout>