<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:fontFamily="@font/lato"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lato"
        android:textSize="16sp"
        android:textStyle="normal"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/edittext_border"
        android:autofillHints=""
        android:fontFamily="@font/lato"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lato"
        android:textSize="16sp"
        android:textStyle="normal"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        android:textSize="16sp"
        android:fontFamily="@font/lato"
        android:textStyle="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:drawablePadding="12dp"
        android:layout_marginBottom="25dp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        tools:ignore="LabelFor,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRegister"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_hint"
            android:textColor="#808080"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/lato_italic"
            android:textStyle="italic"/>

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_login"
            android:textSize="15sp"
            android:fontFamily="@font/lato"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"/>

    </LinearLayout>

</LinearLayout>