<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:textSize="24sp"
        android:fontFamily="@font/lato_bold"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register" />

    <TextView
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:text="@string/username" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="@font/lato"
        android:background="@drawable/edittext_border"
        android:drawablePadding="12dp"
        android:layout_marginBottom="25dp"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        tools:ignore="LabelFor" />

    <TextView
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/lato"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etEmail"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:drawablePadding="12dp"
        android:fontFamily="@font/lato"
        android:layout_marginBottom="25dp"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        tools:ignore="LabelFor" />

    <TextView
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:drawablePadding="12dp"
        android:fontFamily="@font/lato"
        android:layout_marginBottom="25dp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/lato"
        android:text="@string/reenter_password" />

    <EditText
        android:id="@+id/etRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:drawablePadding="12dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/lato"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        tools:ignore="LabelFor,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/register"
            android:textSize="16sp"
            android:fontFamily="@font/lato"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"/>

    </LinearLayout>

</LinearLayout>